Tue May 11 2004  Joe Allen <jhallen@world.std.com>
	* b.c ufile.c :

	Update file date on save.
	Improve Ctrl-<space> marking.

Mon May 10 2004  Joe Allen <jhallen@world.std.com>
	* ufile.c b.c :

	Warns if file changed on save.

	Add 'beep' function and updated jmacsrc.in

Mon May 10 2004  Joe Allen <jhallen@world.std.com>
	* usearch.c, uisrch.c:

	Added '-wrap' flag.  Search wraps when set.

Mon May 10 2004  Joe Allen <jhallen@world.std.com>
	* *rc.in :

	More globs: .cpp, .hpp, .c++, .h++

Mon May 10 2004  Joe Allen <jhallen@world.std.com>
	* b.c tw.c :

	New status line escape sequence: %x shows current context (function
	cursor is in).

	More globs in *rc.in files.

	csh.jsf lisp.jsf

Sun May  9 02:30:41 EDT 2004
	* sh.jsf.in :

	Improved shell script highlighter.
	Fix spelling errors in joe.1.in

Sat May  8 2004  Joe Allen <jhallen@world.std.com>
	* usearch.c :

	Fixed bug in tab completion in text windows.
	Change tab completion key to ^K <return>

Fri May  7 22:37:49 EDT 2004
	* usearch.c :

	Tab completion at search prompt.

	ESC-Tab completes within text windows.

Fri May  7 16:02:21 EDT 2004
	* usearch.c, uisrch.c :

	Added case insensitive by default option.

Fri May  7 2004  Joe Allen <jhallen@world.std.com>
	* main.c, menu.c, pw.c, qw.c, rc.c, tab.c :

	joe a b c, now windows are in order a, b, c.

	TAB completion now works on last path in prompt window:
	for example '!ls foo', tab will complete the foo.

	Added menu_explorer option.  When set: menu stays up when
	a directory is seleted.  When clear: directory is added
	to path and menu is closed.

	Menus are now 40% of window size (or smaller if they are
	not filled).

	Cursor is now position after selected menu entry.

Thu May  6 2004  Joe Allen <jhallen@world.std.com>
	* umenu.c :

	TAB key now cycles through menu entries.  This is useful
	for tab completion: just keep hitting tab until you see the
	file you want, then hit enter.

	TAB completion is more "bash"-like: if you complete a directory