@@ -1,3 +1,30 @@
+
+ Update man page.
+
+ Reload file before I began changing it in another buffer
+
+ Save all modified files
+ Save all modified
+
+ Reload modified files (or current window)
+
+Compiling
+ - save modified files before running
+ - show last compile command immediately: suggest 'make'
+ - do not save scratch buffer
+ - show build on screen- don't wait until it's completely finished.  allow
+   ^C during build.
+
+ Query save loop? for kill-emacs and compile
+
+ Emacs reload from file function? ^X ^V 
+ (it just works out if ^X ^V kills all instances of the buffer)
+
+
+
+
+
+
 Fix for next release:
 
   highlight other windows
@@ -40,12 +67,6 @@ Perl compatible regex search.
 
 Watch loaded file for changes
 
-Reload modified files (or current window)
-
-Reload file before I began changing it in another buffer
-
-Save all modified files
-
 Save all history buffers and keyboard macros in ~/.joe_state file?
 
 Improvements for regular text
@@ -67,13 +88,6 @@ Tie in with CVS
 
 Refactoring
 
-Compiling
- - save modified files before running
- - show last compile command immediately: suggest 'make'
- - do not save scratch buffer
- - show build on screen- don't wait until it's completely finished.  allow
-   ^C during build.
-
 - Gettext?
 
 Syntax Highlighting:
@@ -91,8 +105,6 @@ Support for more languages:
 
 File loading/storing:
 
- Save all modified
-
  Should have switch buffers in current window as more fundamental joe key
  sequence (it's ^[ u and ^[ v for now).
 
@@ -106,11 +118,6 @@ Jmacs/Jstar/Jpico:
  Rectangle mode for emacs yank system
 
  Overtype mode works for yank
-
- Query save loop? for kill-emacs and compile
-
- Emacs reload from file function? ^X ^V 
- (it just works out if ^X ^V kills all instances of the buffer)
 
  ESC args should work differently in emacs
 
@@ -126,8 +133,6 @@ Shell windows:
  Better environment settings for shell windows.
 
 Documentation:
-
- Update man page.
 
  Include documentation for joe hackers.  I wrote a lot of this
  some time, I need to find it.
